--- a/oracle_en/index.html
+++ b/oracle_en/index.html
@@ -19,7 +19,7 @@
         <div class="col-md-4 col-sm-12 text-center div-center">
 
           <div id="title-div">
-            <img src="img/oracle.png">
+            <img src="oracle.png">
             <h1 style="color:white;">Oracle</h1>
           </div>
 
@@ -27,7 +27,7 @@
           <!-- div usado para la animación de cargando.... -->
           <div id="message">
             <div id="loader" class="alert alert-secondary">
-              <img src="img/loading.gif">
+              <img src="loading.gif">
               <div><b>LOADING</b></div>
             </div>
           </div>
